feat:启动包（出错，无法加载资源）

--- a/Start/Starter-Pack-Vue/package.json
+++ b/Start/Starter-Pack-Vue/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/three": "^0.158.2",
     "cannon-es": "^0.20.0",
     "dat.gui": "^0.7.9",
     "three": "^0.154.0",
