--- a/code/55-first-r3f-application/package.json
+++ b/code/55-first-r3f-application/package.json
@@ -12,7 +12,9 @@
     "vite": "^4.5.0"
   },
   "dependencies": {
+    "@react-three/fiber": "8.15",
     "react": "18.2",
-    "react-dom": "18.2"
+    "react-dom": "18.2",
+    "three": "0.158"
   }
 }
