--- a/code/63-post-processing-with-r3f/package.json
+++ b/code/63-post-processing-with-r3f/package.json
@@ -15,6 +15,9 @@
   "dependencies": {
     "@react-three/drei": "^9.105.4",
     "@react-three/fiber": "^8.16.2",
+    "@react-three/postprocessing": "2.16",
+    "leva": "0.9",
+    "postprocessing": "6.35",
     "r3f-perf": "^7.2.1",
     "react": "18.3",
     "react-dom": "18.3",
